added new module announcements